src/objects/GetFeedback__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GetFeedback Responses</relationshipLabel>
        <relationshipName>GetFeedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_did_you_learn_about_us__c</fullName>
        <description>How did you first learn about ClearChoice Dental Implant Centers?</description>
        <label>How did you learn about us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Television Advertisement</fullName>
                </value>
                <value>
                    <fullName>Newspaper or Printed Advertisement</fullName>
                </value>
                <value>
                    <fullName>Research on the Internet</fullName>
                </value>
                <value>
                    <fullName>Friend or family</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_informed_after_consult__c</fullName>
        <description>How informed do you feel after your free consultation?</description>
        <label>How_informed_after_consult</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully informed</fullName>
                </value>
                <value>
                    <fullName>Adequately informed</fullName>
                </value>
                <value>
                    <fullName>A little informed</fullName>
                </value>
                <value>
                    <fullName>My visit was not informative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_likely_to_move_forward__c</fullName>
        <description>How likely are you to move forward with dental implants?</description>
        <label>How likely to move forward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I&apos;ve scheduled my procedure!</fullName>
                </value>
                <value>
                    <fullName>Highly likely</fullName>
                </value>
                <value>
                    <fullName>Somewhat likely</fullName>
                </value>
                <value>
                    <fullName>Not likely</fullName>
                </value>
                <value>
                    <fullName>I need more information before I can make decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_staff_welcoming__c</fullName>
        <description>Would you describe your ClearChoice staff as welcoming?</description>
        <label>Is_staff_welcoming</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very welcoming</fullName>
                </value>
                <value>
                    <fullName>Adequately welcoming</fullName>
                </value>
                <value>
                    <fullName>Neither professional or welcoming</fullName>
                </value>
                <value>
                    <fullName>Unwelcoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospective Patient</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>GetFeedback Responses</relationshipLabel>
        <relationshipName>GetFeedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Detractor_Comment__c</fullName>
        <description>When NPS question received a low answer (&lt;= 7), we ask for a comment.</description>
        <label>NPS Detractor Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>Net Promoter Score - How likely are you to recommend ClearChoice to a friend, family member, or colleague?</description>
        <label>NPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic_for_more_info__c</fullName>
        <description>If you did not schedule your procedure today, we would like the opportunity to provide you with more information to help address your concern, please select a topic you would like to learn more about:</description>
        <label>Topic for more info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I have scheduled my next appointment and am excited about designing my smile</fullName>
                </value>
                <value>
                    <fullName>I am looking into financing and payment options, but plan to move forward</fullName>
                </value>
                <value>
                    <fullName>Financing and paying for dental implants</fullName>
                </value>
                <value>
                    <fullName>Information for family and friends</fullName>
                </value>
                <value>
                    <fullName>Meet a Clearchoice patient</fullName>
                </value>
                <value>
                    <fullName>Learn more about the health benefits of dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GetFeedback Response</label>
    <nameField>
        <label>GetFeedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedback Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>